// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConnectedDevice should render correctly with DFU support 1`] = `
<div
  className="device standalone"
  id="connected-device-id"
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <div
    className="top-bar"
  >
    <div
      className="flag-line"
    />
  </div>
  <div
    className="device-body text-small"
  >
    <div>
      <div
        className="pull-right"
      >
        <button
          className="btn-nordic btn-xs btn btn-primary"
          disabled={false}
          id="dfuButton"
          onClick={[Function]}
          title="Start Secure DFU"
          type="button"
        >
          <img
            alt=""
            className="icon-dfu-button"
            src="test-file-stub"
          />
        </button>
        <div
          className="dropdown"
          id="connectionDropDown"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <button
            aria-expanded={false}
            aria-haspopup={true}
            className="dropdown-toggle btn btn-primary"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              aria-hidden="true"
              className="mdi mdi-settings"
            />
          </button>
        </div>
      </div>
      <div
        className="role-flag pull-right"
      >
        Peripheral
      </div>
      <strong
        className="selectable"
      >
        Device Name
      </strong>
    </div>
    <div
      className="address-text selectable"
    >
      Device Address
    </div>
  </div>
  <div />
</div>
`;

exports[`ConnectedDevice should render correctly without DFU support 1`] = `
<div
  className="device standalone"
  id="connected-device-id"
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <div
    className="top-bar"
  >
    <div
      className="flag-line"
    />
  </div>
  <div
    className="device-body text-small"
  >
    <div>
      <div
        className="pull-right"
      >
        <div
          className="dropdown"
          id="connectionDropDown"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <button
            aria-expanded={false}
            aria-haspopup={true}
            className="dropdown-toggle btn btn-primary"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              aria-hidden="true"
              className="mdi mdi-settings"
            />
          </button>
        </div>
      </div>
      <div
        className="role-flag pull-right"
      >
        Peripheral
      </div>
      <strong
        className="selectable"
      >
        Device Name
      </strong>
    </div>
    <div
      className="address-text selectable"
    >
      Device Address
    </div>
  </div>
  <div />
</div>
`;
